name:                mddoctest
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/oisdk/mddoctest#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisin Kidney
maintainer:          oisin.kidney@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.MarkdownDocTest
  build-depends:       base >= 4.7 && < 5
                     , managed
                     , text
                     , doctest
                     , pandoc
                     , turtle
                     , system-filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/mddoctest
